; ModuleID = '/home/carl/AnghaBench/freebsd/lib/msun/tests/extr_fenv_test.c_test_fegsetround.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/msun/tests/extr_fenv_test.c_test_fegsetround.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FE_TONEAREST = common dso_local global i64 0, align 8
@FLT_ROUNDS = common dso_local global i32 0, align 4
@FE_DOWNWARD = common dso_local global i64 0, align 8
@FE_UPWARD = common dso_local global i64 0, align 8
@FE_TOWARDZERO = common dso_local global i64 0, align 8
@FE_ALL_EXCEPT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_fegsetround to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_fegsetround() #0 {
  %1 = call i64 (...) @fegetround()
  %2 = load i64, i64* @FE_TONEAREST, align 8
  %3 = icmp eq i64 %1, %2
  %4 = zext i1 %3 to i32
  %5 = call i32 @assert(i32 %4)
  %6 = call i64 (...) @getround()
  %7 = load i64, i64* @FE_TONEAREST, align 8
  %8 = icmp eq i64 %6, %7
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load i32, i32* @FLT_ROUNDS, align 4
  %12 = icmp eq i32 %11, 1
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  %15 = load i64, i64* @FE_DOWNWARD, align 8
  %16 = call i64 @fesetround(i64 %15)
  %17 = icmp eq i64 %16, 0
  %18 = zext i1 %17 to i32
  %19 = call i32 @assert(i32 %18)
  %20 = call i64 (...) @fegetround()
  %21 = load i64, i64* @FE_DOWNWARD, align 8
  %22 = icmp eq i64 %20, %21
  %23 = zext i1 %22 to i32
  %24 = call i32 @assert(i32 %23)
  %25 = call i64 (...) @getround()
  %26 = load i64, i64* @FE_DOWNWARD, align 8
  %27 = icmp eq i64 %25, %26
  %28 = zext i1 %27 to i32
  %29 = call i32 @assert(i32 %28)
  %30 = load i32, i32* @FLT_ROUNDS, align 4
  %31 = icmp eq i32 %30, 3
  %32 = zext i1 %31 to i32
  %33 = call i32 @assert(i32 %32)
  %34 = load i64, i64* @FE_UPWARD, align 8
  %35 = call i64 @fesetround(i64 %34)
  %36 = icmp eq i64 %35, 0
  %37 = zext i1 %36 to i32
  %38 = call i32 @assert(i32 %37)
  %39 = call i64 (...) @getround()
  %40 = load i64, i64* @FE_UPWARD, align 8
  %41 = icmp eq i64 %39, %40
  %42 = zext i1 %41 to i32
  %43 = call i32 @assert(i32 %42)
  %44 = call i64 (...) @fegetround()
  %45 = load i64, i64* @FE_UPWARD, align 8
  %46 = icmp eq i64 %44, %45
  %47 = zext i1 %46 to i32
  %48 = call i32 @assert(i32 %47)
  %49 = load i32, i32* @FLT_ROUNDS, align 4
  %50 = icmp eq i32 %49, 2
  %51 = zext i1 %50 to i32
  %52 = call i32 @assert(i32 %51)
  %53 = load i64, i64* @FE_TOWARDZERO, align 8
  %54 = call i64 @fesetround(i64 %53)
  %55 = icmp eq i64 %54, 0
  %56 = zext i1 %55 to i32
  %57 = call i32 @assert(i32 %56)
  %58 = call i64 (...) @getround()
  %59 = load i64, i64* @FE_TOWARDZERO, align 8
  %60 = icmp eq i64 %58, %59
  %61 = zext i1 %60 to i32
  %62 = call i32 @assert(i32 %61)
  %63 = call i64 (...) @fegetround()
  %64 = load i64, i64* @FE_TOWARDZERO, align 8
  %65 = icmp eq i64 %63, %64
  %66 = zext i1 %65 to i32
  %67 = call i32 @assert(i32 %66)
  %68 = load i32, i32* @FLT_ROUNDS, align 4
  %69 = icmp eq i32 %68, 0
  %70 = zext i1 %69 to i32
  %71 = call i32 @assert(i32 %70)
  %72 = load i64, i64* @FE_TONEAREST, align 8
  %73 = call i64 @fesetround(i64 %72)
  %74 = icmp eq i64 %73, 0
  %75 = zext i1 %74 to i32
  %76 = call i32 @assert(i32 %75)
  %77 = call i64 (...) @getround()
  %78 = load i64, i64* @FE_TONEAREST, align 8
  %79 = icmp eq i64 %77, %78
  %80 = zext i1 %79 to i32
  %81 = call i32 @assert(i32 %80)
  %82 = load i32, i32* @FLT_ROUNDS, align 4
  %83 = icmp eq i32 %82, 1
  %84 = zext i1 %83 to i32
  %85 = call i32 @assert(i32 %84)
  %86 = load i32, i32* @FE_ALL_EXCEPT, align 4
  %87 = call i64 @feclearexcept(i32 %86)
  %88 = icmp eq i64 %87, 0
  %89 = zext i1 %88 to i32
  %90 = call i32 @assert(i32 %89)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @fegetround(...) #1

declare dso_local i64 @getround(...) #1

declare dso_local i64 @fesetround(i64) #1

declare dso_local i64 @feclearexcept(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
